--- a/css/prueba.css
+++ b/css/prueba.css
@@ -19,7 +19,7 @@ nav ul li {
 
 nav ul li a {
   color: white;
-  font-size: 2rem;
+  font-size: 1.5rem;
   text-decoration: none;
   margin-left: 26px; }
 
@@ -27,7 +27,7 @@ a.active {
   text-decoration: underline; }
 
 html {
-  font-size: 62.5%; }
+  font-size: 100%; }
 
 body {
   background-image: url(../imagenes/fondo2.jpg); }
@@ -39,19 +39,22 @@ header {
   background-position: center top; }
 
 h1 {
-  font-size: 8rem;
+  display: inline-block;
+  font-size: 4rem;
   text-transform: uppercase;
   color: white;
   position: relative;
   left: 400px;
-  width: 800px;
-  font-family: 'Julee', cursive; }
+  width: 500px;
+  font-family: 'Roboto', sans-serif; }
 
 h5 {
   color: blue; }
 
 h2 {
-  font-family: 'Roboto', sans-serif; }
+  font-size: 2em;
+  font-family: 'Roboto', sans-serif;
+  margin: -6px; }
 
 h3 {
   font-family: 'Julee', cursive; }
@@ -69,11 +72,10 @@ h6 {
   color: white;
   font-family: 'Roboto', sans-serif;
   text-transform: uppercase;
-  font-size: 3rem;
+  font-size: 2rem;
   position: relative;
   left: 340px;
-  width: 300px;
-  background-color: black; }
+  width: 300px; }
 
 article h1 {
   font-family: 'Roboto', sans-serif;
@@ -103,7 +105,6 @@ footer {
 
 #insta {
   position: relative;
-  bottom: -53px;
   left: 30px; }
 
 #face {
@@ -145,6 +146,18 @@ footer {
   background-color: black;
   clear: both;
   margin-top: 30px; }
+
+.caja5 {
+  width: 100%;
+  height: 300px;
+  background-color: black;
+  color: white;
+  padding: 20px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  box-sizing: border-box;
+  border-style: double;
+  border-color: black; }
 
 .animacionBotonera:hover {
   background: linear-gradient(90deg, rgba(73, 29, 26, 0) 0%, rgba(73, 29, 26, 0.146599) 16%, #4c6379 90%);
