--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -1,5 +1,5 @@
 html{
-	font-size: 62.5%;
+	font-size: 100%;
 }
 
 body{
@@ -15,20 +15,24 @@ header{
 }
 
 h1{ 
-	font-size: 8rem;
+	display: inline-block;
+	font-size: 4rem;
 	text-transform: uppercase;
 	color: white; 
 	position: relative;
 	left: 400px;
-	width: 800px;
-	font-family: 'Julee', cursive;
+	width: 500px;
+	font-family: 'Roboto', sans-serif;
 }
+
 h5{
 	color: blue;
 }
 
-h2{
+h2{ 
+	font-size: 2em; 
 	font-family: 'Roboto', sans-serif;
+	margin: -6px;
 }
 
 h3{
@@ -48,11 +52,10 @@ h4{
 h6{color: white;
     font-family: 'Roboto', sans-serif;
 	text-transform: uppercase;
-	font-size: 3rem;
+	font-size: 2rem;
 	position: relative;
 	left: 340px;
 	width: 300px;
-	background-color: black;
 }
 
 article h1{
@@ -88,7 +91,6 @@ footer{
 
 #insta{
 	position: relative;
-	bottom: -53px;
 	left: 30px;
 
 }
@@ -136,6 +138,18 @@ footer{
 	background-color: black;
 	clear: both;
 	margin-top: 30px;
+}
+.caja5{
+	width: 100%;
+	height: 300px;
+	background-color: black;
+	color: white;
+	padding: 20px;
+	margin-bottom: 10px;
+	margin-top: 10px;
+	box-sizing: border-box;
+	border-style: double;
+	border-color: black;
 }
 
 .animacionBotonera:hover{
