--- a/css/prueba.css
+++ b/css/prueba.css
@@ -57,7 +57,8 @@ h2 {
   margin: -6px; }
 
 h3 {
-  font-family: 'Julee', cursive; }
+  font-family: 'Roboto Condensed', sans-serif;
+  text-transform: uppercase; }
 
 h4 {
   color: white;
@@ -158,6 +159,13 @@ footer {
   box-sizing: border-box;
   border-style: double;
   border-color: black; }
+
+.caja6 {
+  color: white;
+  padding: 20px;
+  clear: both;
+  margin: 30px;
+  text-align: center; }
 
 .animacionBotonera:hover {
   background: linear-gradient(90deg, rgba(73, 29, 26, 0) 0%, rgba(73, 29, 26, 0.146599) 16%, #4c6379 90%);
